--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=185.28.21.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u931454634_ikneliadb
+DB_USERNAME=u931454634_admin
+DB_PASSWORD=4dm1N2021
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
