--- a/.env
+++ b/.env
@@ -24,13 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.hostinger.com
+MAIL_PORT=465
+MAIL_USERNAME=contacto@iknelia-soluciones.com
+MAIL_PASSWORD=Kamicase13
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=contacto@iknelia-soluciones.com
+MAIL_FROM_NAME="iknelia"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
